# PDE-HPC

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: boundary.h  config.h  cuda_utils.h  distributed_array.h  imex_integrator.h  mesh_partition.h  mesh_types.h  petsc_utils.h  simulation_functions.h  simulation_params.h
preprocessing/: decompose_mesh.py  generate_mesh.py
scripts/: build_petsc.sh
src/core/: imex_integrator.cpp  main.cpp  mesh_decomposition.cpp  petsc_utils.cpp  pressure_solver.cpp  simulation.cpp
src/cuda/: boundary_kernels.cu  flux_kernels.cu
src/utils/: mpi_comm.cpp  profiling.cpp
validation/: analytical_solutions.py  verify_conservation.py
